initial final commit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HELLO WORLD</title>
-    <img src="D:\UDEMY\web sites\first html\images\4-D2BB9672-42131-480.jpg" height="100" width="100">
+    <img src="images/prasad.jpg" height="100" width="100">
     <h2>PRASAD JADHAV</h2>
     <h5>BE.COMPUTER</h5>
     <hr size="6">
